--- a/src/search.css
+++ b/src/search.css
@@ -115,8 +115,8 @@ img {
   color: white;
   font-weight: 100;
 }
-.photoViewer:hover .card_overlay {
-  transform: translateY(0);
+.card_overlay:hover{
+  transform: translateY(14%);
 }
 
 .uploader_image {
@@ -126,16 +126,20 @@ img {
 
 .btn {
   font-size: 1.25rem;
-  border: 2px solid;
+  border: 1px solid black;
   border-radius: 9px;
   transform: scale(1);
+  background-color: #000000;
+  padding: 5px;
+  transition: 0.25s ease-in-out;
+  color: white;
+  cursor: pointer;
   transition: 0.25s ease-in-out;
 }
 .btn:hover {
-  transform: scale(1.1);
-  background: violet;
-  box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
-    6px 6px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.08);
+  /* box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
+    6px 6px 10px rgba(0, 0, 0, 0.2); */
 }
 
 #header-search {
